Version 0.0.2 (???-??-????)
  * fixed bugs (thanks to Stian Skjelstad)
    - should no longer crash on update
    - should now load the correct window on commit and update
    - nsvn__destroy_window was misspelled as nsvn__destory_window

Version 0.0.1 (Jul-02-2007)

  * Integrating with Nautilus.
  * Show and Hide context menu items.
  * Subversion repository creation.
  * Checkout Subversion repository to working copy.
  * Add files/directory to working copy.
  * Commit working copy to Subversion repository.
  * Update working copy from a Subversion repository.