@@ -3,6 +3,7 @@ Version 0.0.2 (???-??-????)
     - should no longer crash on update
     - should now load the correct window on commit and update
     - nsvn__destroy_window was misspelled as nsvn__destory_window
+    - call gtk_widget_destroy(window) only if window is non-NULL
 
 Version 0.0.1 (Jul-02-2007)
 
